--- a/config.json.sample
+++ b/config.json.sample
@@ -13,15 +13,14 @@
       { "router": 2, "ip": "2:2:2:2::" }
     ],
     "interface": "enpXYZ",
-    "robot_user": "K1234",
-    "robot_password": "(can be used alternativly to robot_passwords, but is risky security-wise)",
-    // you can set a robot password per server
-    "robot_passwords": {
-      "1": "111",
-      "2": "222"
+    "robot_auth": "(can be used alternativly to robot_auths, but is risky security-wise)",
+    // you can set a robot auth per server
+    "robot_auths": {
+      "1": "#123+abc:111",
+      "2": "#321+cba:222"
     },
     // you can enable this if you don't want to switch failover ips and instead have a robot vlan
     // NOTE: set interface to enpXYZ.vlan (or whatever the vlan is named) for this to work
-    // robot_password(s) and robot_user are no longer required with this option set to true
+    // robot_auth(s) are no longer required with this option set to true
     "use_vlan_ips": false
 }
