--- a/failover-daemon/config.json.sample
+++ b/failover-daemon/config.json.sample
@@ -1,17 +1,27 @@
 {
-  "ips": {
-    "1.2.3.4": "#1234:1234",
-    "4.3.2.1": "#4321:4321"
-  },
   "servers": {
     "1": {
-       "v4": "1.2.3.4",
-       "v6": "1234::"
+        "token": "1234",
+        "main": {
+           "v4": "10.12.10.1",
+           "v6": "1012:10::1"
+        },
+        "failover": {
+           "v4": "10.12.0.1",
+           "v6": "1012:0::1"
+        }
     },
     "2": {
-        "v4": "4.3.2.1",
-        "v6": "4321::"
+        "token": "1234",
+        "main": {
+           "v4": "10.12.10.2",
+           "v6": "1012:10::2"
+        },
+        "failover": {
+           "v4": "10.12.0.2",
+           "v6": "1012:0::2"
+        }
     }
-  }
-  "listen": "1.2.3.4:80"
+  },
+  "listen": "0.0.0.0:1334"
 }
