failover-daemon: update sample config to the one used for testing

--- a/failover-daemon/config.json.sample
+++ b/failover-daemon/config.json.sample
@@ -1,27 +1,27 @@
 {
+  "listen": "10.42.0.254:9090",
   "servers": {
     "1": {
-        "token": "1234",
-        "main": {
-           "v4": "10.12.10.1",
-           "v6": "1012:10::1"
-        },
-        "failover": {
-           "v4": "10.12.0.1",
-           "v6": "1012:0::1"
-        }
+      "failover": {
+        "v4": "42.0.0.1",
+        "v6": "42:1::"
+      },
+      "main": {
+        "v4": "10.42.0.1",
+        "v6": "fe42:1::"
+      },
+      "token": "1234"
     },
     "2": {
-        "token": "1234",
-        "main": {
-           "v4": "10.12.10.2",
-           "v6": "1012:10::2"
-        },
-        "failover": {
-           "v4": "10.12.0.2",
-           "v6": "1012:0::2"
-        }
+      "failover": {
+        "v4": "42.0.0.2",
+        "v6": "42:2::"
+      },
+      "main": {
+        "v4": "10.42.0.2",
+        "v6": "fe42:2::"
+      },
+      "token": "1234"
     }
-  },
-  "listen": "0.0.0.0:1334"
+  }
 }
