poetry: build with pex

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,14 @@ authors = ["Maciej Krüger <mkrueger@mgit.at>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "~3.12"
 bunch-py3 = "^2.0.0"
 requests = "^2.32.3"
 
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.poetry.group.dev.dependencies]
+pex = "^2.19.1"
+
+#[build-system]
+#requires = ["poetry-core"]
+#build-backend = "poetry.core.masonry.api"
