--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -6,6 +6,7 @@ jobs:
   refresh:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: cachix/install-nix-action@v22
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
