--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
           prerelease: false
 
       - name: Upload Release Asset .deb
-        id: upload-release-asset
+        id: upload-release-asset-deb
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -59,7 +59,7 @@ jobs:
           asset_content_type: application/vnd.debian.binary-package
 
       - name: Upload Release Asset .pex
-        id: upload-release-asset
+        id: upload-release-asset-pex
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
