--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,11 @@ version = "0.0.0"
 description = "This is a little script for switching the failover ips on robot dedicated servers. It's also possible to use a robot vlan."
 authors = ["Maciej Krüger <mkrueger@mgit.at>"]
 readme = "README.md"
+#packages = [{include = "robot_failover", from = "."}]
+package-mode = false
+
+#[tool.poetry.scripts]
+#robot_failover = "robot_failover:cli"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.14"
